added meet the guys new one

--- a/wp-content/themes/podcast/resources/assets/styles/components/_contact.scss
+++ b/wp-content/themes/podcast/resources/assets/styles/components/_contact.scss
@@ -76,6 +76,10 @@
                 margin:0rem;
             }
 
+            &-icons{
+                width:20px;
+            }
+
         }
 
         
