--- a/wp-content/themes/podcast/resources/assets/styles/components/_meettheguys.scss
+++ b/wp-content/themes/podcast/resources/assets/styles/components/_meettheguys.scss
@@ -286,6 +286,14 @@
             img {
                 width:100%;
                 height:auto;
+
+                @media screen and (min-width:992px) {
+                    margin:auto;
+                    height:581px;
+                    width:auto;
+                    object-fit: fill;
+                }
+
             }
 
         }
