--- a/wp-content/themes/podcast/resources/assets/styles/components/_hero.scss
+++ b/wp-content/themes/podcast/resources/assets/styles/components/_hero.scss
@@ -55,6 +55,50 @@
         z-index:-1;
     }
 
+    .hero-wrapper{
+
+
+        .avail__medium__wrapper{
+            display:flex;
+            flex-direction: row;
+            justify-content: center;
+
+
+            @media screen and (min-width:768px) {
+                justify-content: flex-start;
+            }
+
+
+            > span{
+                // margin-left: auto;
+                margin-right: .625rem;
+
+                &:last-of-type(){
+                    margin-right: 0;
+                }
+
+                @media screen and (min-width:992px) {
+                    margin-right: 1rem;
+
+                    &:last-of-type(){
+                        margin-right: 0;
+                    }
+                }
+
+                img {
+                    width:40px;
+
+                    @media screen and (min-width:768px) {
+                        width:62px;
+                    }
+                }
+                
+            }
+
+        }
+
+    }//end hero wrapper
+
     
 }
 
